add /auth/check endpoint for token validating
